# quiz_crunch_backend

./: .env  LICENSE  QUICK_START.MD  README.md  client.key  client.pem  config.py  pyproject.toml  run.py
app/: __init__.py  containers.py
app/blueprint/: user_blueprint.py
basic/api_response/: api_response.py
basic/minio_client/: minio_clent.py
basic/model/: basic_model.py
basic/repository/: base_repository.py  basic_entity.py  basic_history_entity.py  unit_of_work.py
manage/: __init__.py  manage_container.py
manage/entity/: user.py
manage/entity/history/: user_history.py
manage/model/: user_model.py
manage/repository/: user_repository.py
manage/service/: user_service.py
manage/tests/: test_generate_data_table.py  test_minio.py
